--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ h1, h2, h3, h4, h5, h6, p, div {
 }
 
 h1, h2, h3 {
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
 h4, h5, p, a {
@@ -67,3 +67,26 @@ header {
     display: none;
 }
 
+.top-wrapper {
+    background-position: center;
+    background-image: linear-gradient(to bottom, rgba(6, 35, 44, 0.52), rgba(7, 27, 53, 0.73)),
+    url('https://www.industryforum.co.uk/wp-content/uploads/sites/6/2018/10/Industial-Components.jpg');
+    background-size: cover;
+    min-height: 40vw;
+    padding: 15vw 0 15vw 0;
+    color: white;
+    text-align: center;
+    
+}
+
+.top-wrapper h1 {
+    opacity: 0.9;
+    font-size: 45px;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+  }
+  
+  .top-wrapper p {
+    opacity: 0.8;
+    margin-bottom: 3px;
+  }
