--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,14 +5,19 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
 h1, h2, h3 {
-    font-family: 'Noto Sans JP', sans-serif;
+    font-family: 'Work Sans', sans-serif;
 }
 
 h4, h5, p, a {
     font-family: 'Noto Sans JP', sans-serif;
+}
+
+h1 {
+    font-weight: bold;
 }
 
 /* Tollbar */
@@ -20,8 +25,7 @@ h4, h5, p, a {
 header {
     height: 65px;
     width: 100%;
-    /* background-color: rgba(34, 49, 52, 0.9); */
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.9);
     position :fixed;
     top: 0;
     z-index: 10;
@@ -35,10 +39,11 @@ header {
 
 .header-left {
     float: left;
+    padding: 1vw;
 }
 
 .header-left img {
-    max-width: 2vw;
+    max-width: 5vw;
 }
 
 .header-right {
@@ -61,7 +66,6 @@ header {
     background-color: rgba(255, 255, 255, 0.3);
 }
 .logo {
-    width: 75px;
     margin-top: 0px;
 }
 
@@ -114,8 +118,12 @@ header {
     padding: 2vw;
     float: left;
     width: 50%;
-    
-}  
+    text-align: justify;
+}
+
+.about-item p {
+    font-weight: normal;
+}
 
 /* Services */
 
@@ -178,7 +186,7 @@ header {
 
 /* Location */
 .location-wrapper{ 
-         
+    display: inline-block;
     margin: 3vw 0;
     font-weight: bold;
     text-align: center;
@@ -190,9 +198,59 @@ header {
     margin: 0;
 }
 
-.location {
-    float: left;
+.locations {
+    flex: auto;
+    flex-wrap: wrap;
     width: 25%;
+  }
+
+.location-item {
+    padding: 1vw;
+    float: left;
+    width: 100%;
+    text-align: center;
+}
+
+.location-item h3{
+    margin: 1vw 0;
+}
+
+.location-image {
+    display: block;
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+
+.location-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .3s ease;
+    background-color: #fcb022f6;
+}
+  
+.location-overlay:hover  {
+    opacity: 1;
+}
+  
+.location-text {
+    color: white;
+    position: absolute;
+    text-align: center;
+    font-size: 12px;
+    padding: 3vw 2vw;
+}
+
+.location {
+    padding: 1vw;
+    float: left;
+    width: 100%;
   }
 
  .location-icon {
@@ -214,25 +272,19 @@ header {
     color: #b3aeb5;
   }
   
-  
-  
 /* Contact */
 
 .contact-wrapper{        
     margin: 2vw 0;
     font-weight: bold;
-    text-align: center;
     color: darkslategrey;
-    
 }
 
 .l_container {
-    width: 40%;
-    margin: 3vw auto;    
-    padding: 2vw;    
+    width: 75%;
+    margin: 0 auto;    
+    padding: 1vw;    
     display: inline-block;
-    background-color: lightgray ;
-    border : 2px solid darkslategrey;
 }
 
 
@@ -242,63 +294,48 @@ header {
 }
 
 .contact-section {
-    padding: 2vw;
+    padding: 1vw;
     width: 100%;
     display: inline-block;
+    text-align: left;
 }
 
-
-
-/* Footer */
-
-footer {
-    background-color: rgb(51, 51, 51);
-    padding: 1vw 3vw;
+.contact-list {
+    margin: 1vw;
     width: 100%;
-    height: auto;
-    color: darkgrey;
-    
-}
-
-footer .container {
-    display: inline-block;
-}
-
-.footer-content {
-    width: 50%;
     float: left;
-    padding: 1vw;
-    margin: 0 auto;
 }
 
-/*.contact-item span {
-    margin-right: 1vw;
-}*/
-
-.contact-section li {
-    list-style: none;
+.contact-desc {
+    text-align: center;
+    width: 100%;
+    font-size: 1vw;
+    font-family: 'Noto Sans JP', sans-serif;
+    float: left;
+    font-size: light;
 }
-/* Tambahkan CSS untuk tags <input> dan <textarea> */
-  input {
-    padding: 3px;
-    width : 20vw;    
-    margin: auto;
-    font-size : pxtoem(16,16);
-    border : 1px solid #dee7ec;    
-    float: right;
-  }
-  
-  textarea {
-    padding: 1vw;
-    width : 30vw;
-    height: 10vw;
-    margin: auto;
-    font-size : pxtoem(16,16);
-    border : 1px solid #dee7ec;    
-  }
-  /* Tambahkan CSS untuk contact-submit */
 
-  .button {          
+.contact-list input {
+    font-family: 'Noto Sans JP', sans-serif;
+}
+
+.contact-list input {
+    border: darkslategray solid 1px;
+    border-radius: 5px;
+    height: 3vw;
+    width: 100%;
+    float: left;
+}
+
+.contact-list textarea {
+    border: darkslategray solid 1px;
+    border-radius: 5px;
+    height: 8vw;
+    width: 100%;
+    float: left;
+}
+
+.button {          
     transition-duration: 0.4s;  
     
   }
@@ -309,24 +346,83 @@ footer .container {
   }
 
 
+/* Footer */
+
+footer {
+    background-color: rgb(100, 100, 100);
+    width: 100%;
+    height: auto;
+    color: darkgrey;
+}
+
+.footer-content {
+    width: 50%;
+    float: left;
+    padding: 1vw;
+    margin: 0 auto;
+}
+
   .footer-up {
-    background-color:rgba(49, 43, 43, 0.7);
     color: #fff;
-    height: 20vw;
-    padding: 20px;
-    box-shadow: 5px 10px darkgray;
+    display: inline-block;
+    padding: 1vw 3vw;
+    width: 100%;
   }
   
   .footer-info {
-    width: 33%;
-    float: left;     
+    width: 50%;
+    float: left;
+    padding: 1vw;
   }
 
-  .footer-item span {
-    margin-right: 1vw;
-}
-  .footer-service-list {
-    list-style: none;
-    float: center;
+  .footer-img {
+    max-width: 16vw;
+    float: left;
+    display: block
   }
+
+  .footer-contact {
+      float: left;
+      margin-top: 1vw;
+  }
+
+.footer-item span {
+    margin-right: 3vw;
+}
+
+.footer-item p {
+    margin: 0;
+    font-size: 1.2vw;
+    
+}
+
+.footer-item a {
+    text-decoration: none;
+    color: white;
+}
+
+.footer-team {
+    text-align: right;
+}
+
+.footer-teamlist {
+    margin-top: 3vw;
+    text-align: right;
+}
+
+.footer-teamlist p {
+    margin: 0;
+    font-weight: 300;
+}
   
+.footer-down {
+    background-color: rgb(44, 44, 44);
+    color: white;
+    width: 100%;
+    padding: 1vw;
+}
+
+.footer-down p {
+    margin: 0;
+    font-weight: 300;
+}
