--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,7 +66,8 @@ header {
 }
 
 .header-right a:hover {
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(20,40,60, 0.7);
+    color : white;
 }
 
 .header-right span {
@@ -91,10 +92,10 @@ header {
 .top-wrapper {
     background-position: center;
     background-image: linear-gradient(to bottom, rgba(6, 35, 44, 0.733), rgba(7, 27, 53, 0.73)),
-    url('https://www.industryforum.co.uk/wp-content/uploads/sites/6/2018/10/Industial-Components.jpg');
+    url('./static/back.jpg');
     background-size: cover;
     min-height: 40vw;
-    padding: 14vw 0 14vw 0;
+    padding: 8vw 2vw 3vw 2vw;
     color: white;
     text-align: center;
 }
@@ -108,6 +109,84 @@ header {
   .top-wrapper h3 {
     opacity: 0.8;
   }
+
+
+/* Slider */
+
+slider {
+    display: block;
+    width: 100%;
+    height: 80vh;
+    background-color: #1f1f1f;
+    overflow: hidden;
+    position: relative;
+}
+
+slider>* {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 80vh;
+    background-color: #1f1f1f;
+    overflow: hidden;
+    animation: slide 12s infinite;
+    overflow: hidden;
+}
+
+slide:nth-child(1) {
+    left: 0%;
+    animation-delay: -1s;
+    background-image: url('./static/satu.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+slide:nth-child(2) {
+    animation-delay: 2s;
+    background-image: url('./static/dua.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+slide:nth-child(3) {
+    animation-delay: 5s;
+    background-image: url('./static/tiga.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+slide:nth-child(4) {
+    animation-delay: 8s;
+    background-image: url('./static/empat.jpg');
+    background-size: cover;
+    background-position: center;
+} 
+
+@keyframes slide {
+    0% {
+        left: 100%;
+        width: 100%;
+    }
+    5% {
+        left: 0%
+    }
+    25% {
+        left: 0%;
+    }
+    30% {
+        left: -100%;
+        width: 100%;
+    }
+    30.0001% {
+        left: -100%;
+        width: 0%;
+    }
+    100% {
+        left: 100%;
+        width: 0%;
+    }
+}
+
 
 
 
@@ -419,6 +498,10 @@ footer {
     color: white;
 }
 
+.footer-item a:hover {
+    text-decoration: underline;
+    color: blue;
+}
 .footer-team {
     text-align: right;
 }
